...
    android:orientation="vertical"
    tools:context=".ui.instructions.InstructionActivity">

    <include layout="@layout/toolbar" />

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_footer"
        android:layout_below="@id/toolbar" />

    <RelativeLayout
        android:id="@+id/layout_footer"
        android:layout_width="match_parent"
        android:layout_height="48dp"
...
            android:paddingRight="12dp"
            android:scaleType="centerInside"
            android:src="@drawable/button_arrow_left_selector"
            android:visibility="invisible" />

        <org.akvo.caddisfly.sensor.striptest.widget.PageIndicatorView
            android:id="@+id/pager_indicator"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:id="@+id/image_pageRight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:paddingLeft="12dp"
...
